<resources>
    <string name="app_name">Project_8_Inventory_1</string>

    <!-- Empty textView text -->
    <string name="empty_view_title_text">No books found.</string>
    <!-- Empty textView text -->
    <string name="empty_view_subtitle_text">Get started by adding a book.</string>
    <string name="book_sale_button">Sale</string>
    <string name="main_activity_label">Books List</string>
    <string name="action_save">Save</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="action_delete">Delete</string>


    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="quantity">Quantity:</string>
    <string name="details_book_name">Name</string>
    <string name="details_book_price">Price</string>
    <string name="details_book_quantity">Quantity</string>
    <string name="details_book_supplier_name">Supplier Name</string>
    <string name="details_book_supplier_phone_number">Supplier Phone Number</string>
    <string name="details_btn_edit">Edit</string>
    <string name="details_btn_delete">Delete</string>
    <string name="details_btn_order">Order</string>
    <string name="editor_btn_change">Change</string>
    <string name="editor_book_thumbnail_title">Book Thumbnail</string>
    <string name="editor_book_info_title">Book info</string>
    <string name="editor_hint_supplier_phone_number">Phone Number</string>
    <string name="editor_supplier_info_title">Supplier info</string>
    <string name="editor_hint_name">Name</string>
    <string name="editor_hint_unit_price">Unit Price</string>
    <string name="editor_hint_quantity">Quantity</string>
    <string name="editor_hint_supplier_name">Name</string>
</resources>
